--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p>
           زهراء بنت سند الزبيدي
         </p>
-
+        <img class="sig-img" src="./image/signuture.png" alt="">
       </div>
       <div class="Seal">
         <img src="image/Seal.png" alt="Seal">
